tests/NormalTests/paczka1/fuzzy1/97198864.err
Error in line 1: YySWZk A299 7,5
Error in line 4: s1CS S174 4,0
Error in line 2: Sgsn S309 1,1
Error in line 18: YySWZk S174 56,5
Error in line 22: kmb9e13WF S174 58,8
Error in line 15: A299 S309 9,2
Error in line 26: A299 S174 32,2
Error in line 35: Sgsn S174 12,6
Error in line 24: kmb9e13WF A299 68,8
